practice/ironmancapstone/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codespace-ingress
  labels:
    app.kubernetes.io/name: codespace-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api/sandbox"
        backend:
          service:
            name: sandbox-service
            port:
              number: 80
              # new line of code for router
  - host: '*.preview.localhost'
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: router-service
            port:
              number: 80
